feat: Section 삭제 기능을 개발한다